# spartan2-hyrax-mopro

./: .gitattributes  .gitignore  Cargo.toml  Config.toml  README.md
flutter/: pubspec.yaml
flutter/android/: gradle.properties
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/zkid/app/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/services/: background_service.dart  notification_service.dart  proof_service_manager.dart
flutter/lib/services/models/: proof_result.dart  proof_task.dart
ios/MoproApp/: ContentView.swift  ecdsa.r1cs  ecdsa.wtns  ecdsa_main.wasm  ecdsa_proving.key  ecdsa_verifying.key  jwt.r1cs  jwt.wtns  jwt_proving.key  jwt_verifying.key
ios/MoproApp.xcodeproj/: project.pbxproj
src/: lib.rs  sha256.rs
wallet-unit-poc/circom/: package.json
wallet-unit-poc/ecdsa-spartan2/: Cargo.toml  build.rs
wallet-unit-poc/ecdsa-spartan2/src/: lib.rs  main.rs  mobile.rs  mobile_ecdsa_circuit.rs  mobile_jwt_circuit.rs  prover.rs
wallet-unit-poc/ecdsa-spartan2/src/circuits/: prepare_circuit.rs  show_circuit.rs
