
[workspace]
members = [".", "wallet-unit-poc/ecdsa-spartan2"]

[package]
name = "spartan2-hyrax-mopro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0" }
thiserror = "2.0.12"
ecdsa-spartan2 = { path = "wallet-unit-poc/ecdsa-spartan2" }

# SPARTAN2_DEPENDENCIES
spartan2 = { git = "https://github.com/moven0831/Spartan2.git", branch = "aarch64-compatible" }
bellpepper-core = "0.4.0"
bellpepper = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
digest = "0.10"
sha2 = "0.10.7"
sha3 = "0.10"
rayon = "1.10.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
itertools = "0.14.0"
subtle = "2.5"
generic-array = "0.14"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
bitvec = "1.0"
byteorder = "1.4.3"
halo2curves = { version = "0.9.0", features = ["derive_serde", "std"] }
group = "0.13.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0", features = ["build"] }
spartan2 = { git = "https://github.com/moven0831/Spartan2.git", branch = "aarch64-compatible" }

[profile.release]
debug = 1
lto = "fat"
