
[workspace]
members = [".", "wallet-unit-poc/ecdsa-spartan2"]

[package]
name = "spartan2-hyrax-mopro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["uniffi"]
uniffi = ["mopro-ffi/uniffi"]
flutter = ["mopro-ffi/flutter"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = "0.3.2"
thiserror = "2.0.12"
anyhow = "1.0.99"
ecdsa-spartan2 = { path = "wallet-unit-poc/ecdsa-spartan2" }

# SPARTAN2_DEPENDENCIES
spartan2 = { git = "https://github.com/therealyingtong/Spartan2.git", branch = "zk", default-features = false }
bellpepper-core = "0.4.0"
bellpepper = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
digest = "0.10"
sha2 = "0.10.7"
sha3 = "0.10"
rayon = "1.10.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
itertools = "0.14.0"
subtle = "2.5"
generic-array = "0.14"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
bitvec = "1.0"
byteorder = "1.4.3"
halo2curves = { version = "0.9.0", features = ["derive_serde", "std"] }
group = "0.13.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
mopro-ffi = { version = "0.3.2", features = ["uniffi-tests"] }

[build-dependencies]
spartan2 = { git = "https://github.com/therealyingtong/Spartan2.git", branch = "zk", default-features = false }

[profile.release]
opt-level = "z"     # Optimize for size
lto = "thin"        # Enable thin Link-Time Optimization for better cross-crate optimization
strip = true        # Strip debug symbols from release binaries
debug = false       # Disable debug info in release builds
codegen-units = 1   # Better optimization at the cost of longer compile time
